fix overflow

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -67,6 +67,12 @@ $dark-secondary-filter: invert(19%) sepia(16%) saturate(763%) hue-rotate(173deg)
   border-radius: 0.5vmax;
 }
 
+body {
+  @media (orientation: landscape) {
+    overflow: hidden;
+  }
+}
+
 .switch {
   @include light-neu-button;
   @include center-content;
@@ -154,7 +160,6 @@ $dark-secondary-filter: invert(19%) sepia(16%) saturate(763%) hue-rotate(173deg)
   @include panel;
 
   @media (orientation: landscape) {
-    padding-left: 5vh;
     width: 40%;
   }
 }
